Fixing overflows

--- a/DatingApp-SPA/src/app/header/header.component.css
+++ b/DatingApp-SPA/src/app/header/header.component.css
@@ -11,3 +11,6 @@ img  {
        margin-bottom: 1.5rem;
    }
   }
+  .dropdown {
+      margin: auto;
+  }
