--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.css
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.css
@@ -11,4 +11,12 @@
     background-color: #fff;
     border-top: none;
      
-}
+}.wrapper {
+    display: inline-block;
+    height: 150px;
+    width: 250px;
+    padding: 5px;
+    margin: 5px;
+    background: lightgray;
+  }
+  
